[package]
name = "narupa-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#openmm-sys = "*"
tonic = "0.4"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
prost = "0.7"
prost-types = "0.7.0"
futures = "*"
tokio-stream = { version = "0.1", features = ["net"] }
quick-xml = "*"
pdbtbx = "*"

[build-dependencies]
tonic-build = "0.4"

[dependencies.openmm-sys]
version = "7.4.1"
#features = ["static-lib"]#, "cpu"]
features = ["cpu"]