[package]
name = "nanover-proto"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Jonathan Barnoud"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.9.2"
prost = "0.11.9"
prost-types = "0.11.9"
pack-prost = { path = "../pack-prost" }
log = "0.4.21"

[build-dependencies]
tonic-build = "0.9.2"
