[package]
name = "nanover-proto"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Jonathan Barnoud"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.11.0"
prost = "0.12.3"
prost-types = "0.12.3"
pack-prost = { path = "../pack-prost" }

[build-dependencies]
tonic-build = "0.11.0"
