[package]
name = "nanover-rs"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Jonathan Barnoud"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#openmm-sys = "*"
tonic = "0.11.0"
tokio = { version = "1.37", features = [
  "macros",
  "rt-multi-thread",
  "signal",
  "fs",
] }
prost = "0.12.3"
prost-types = "0.12.3"
futures = "0.3.28"
tokio-stream = { version = "0.1", features = ["net"] }
quick-xml = "0.30.0"
clap = { version = "4.4.1", features = ["derive"] }
assert_float_eq = "1.1.3"
components = { path = "../components" }
pack-prost = { path = "../pack-prost" }
nanover-proto = { path = "../nanover-proto" }
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
network-interface = "1.0.3"
thiserror = "1.0.47"
hyper = "0.14.27"
log = "0.4.20"
env_logger = "0.10.0"
egui = "0.22.0"
eframe = "0.22.0"
rfd = "0.11.4"
indexmap = "2.0.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
socket2 = "0.5.4"

[build-dependencies]
tonic-build = "0.11.0"

[dependencies.openmm-sys]
version = "*"
#features = ["static-lib"]#, "cpu"]
#path = "/home/jon/rust/openmm-rust/openmm-sys/"
#features = ["minimal", "static-lib"]
features = ["minimal"]

[dev-dependencies]
rstest = "0.18.2"
test-log = "0.2.13"

[[bin]]
name = "nanover-cli"

[[bin]]
name = "nanover-gui"
