[package]
name = "narupa-proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.7.2"
prost = "0.10"
prost-types = "0.10.0"
pack-prost = {path = "../pack-prost"}

[build-dependencies]
tonic-build = "0.7.2"