[package]
name = "narupa-proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.8.3"
prost = "0.11.6"
prost-types = "0.11.6"
pack-prost = {path = "../pack-prost"}

[build-dependencies]
tonic-build = "0.8.4"