[package]
name = "narupa-rs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#openmm-sys = "*"
tonic = "0.8.3"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal", "fs"] }
prost = "0.11.6"
prost-types = "0.11.6"
futures = "*"
tokio-stream = { version = "0.1", features = ["net"] }
quick-xml = "0.23.0"
clap = { version = "3.2.17", features = ["derive"] }
assert_float_eq = "1.1.3"
components = {path = "../components"}
pack-prost = {path = "../pack-prost"}
narupa-proto = {path = "../narupa-proto"}
uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }
network-interface = "0.1.5"
thiserror = "1.0.38"
hyper = "0.14.23"
log = "0.4.17"
env_logger = "0.10.0"
egui = "0.20.1"
eframe = "0.20.1"
rfd = "0.10.0"
indexmap = "1.9.2"

[build-dependencies]
tonic-build = "0.8.4"

[dependencies.openmm-sys]
version = "*"
#features = ["static-lib"]#, "cpu"]
#path = "/home/jon/rust/openmm-rust/openmm-sys/"
#features = ["minimal", "static-lib"]
features= ["minimal"]

[dev-dependencies]
rstest = "0.15.0"

[[bin]]
name = "narupa-cli"

[[bin]]
name = "narupa-gui"
